Fix Misc warnings